--- a/Module-2/first-css.html
+++ b/Module-2/first-css.html
@@ -65,6 +65,20 @@
         }
     </style>
 
+    <div>
+        <style>
+            .git{
+                text-align: center;
+            }
+            .git-part{
+                color: gray;
+                background-color: hotpink;
+            }
+        </style>
+        <h3 class="git git-part"> This past is only for <a href="https://github.com">Git-Hub</a></h3>
+        <P class="git-part"> For More Informantion visit my <a href="https://github.com/its-kayes">Profile</a> on <a href="https://github.com">Git-Hub</a> </P>
+    </div>
+
 
 
 </body>
